    - Fix removal of plots from a chart with multiple selections
    - Fix pmchart window resizing on chart deletion and title
      changes
    - Improvements to Edit Chart dialog plot deletion and later
      re-animation
    - Ensure correct pmContext is used for several libqmc calls
    - Support full hostname dynamic expansion via %H, analagous
      to the existing short hostname dynamic expansion via %h.

pcp-gui 1.5.11 (1 November 2013)
    - Updates to the PCP Programmers Guide (now complete).
    - Fix bug where chart selection showed incorrect units for
      reported values below the timeline.

pcp-gui 1.5.10 (9 September 2013)
    - Updates to the PCP Users and Administrators Guide.
    - Updates to the PCP Programmers Guide.
    - Install a known-good pdf version of each book.
    - Convert pmchart over to use pmGetContextHostName for more
      accurate hostname reporting.

pcp-gui 1.5.9 (28 July 2013)
    - Fix problems with pmchart Samples/Visible History.
    - Support authenticated connections in New Host dialog.
    - Fix pmchart startup handling lack of metrics source.
    - Fix missing metric handling for archive View files.
    - Usability improvements for the New/Edit Chart Apply button.
    - Resolve packaging issue where /usr/bin gets installed.
    - Preserve the update interval when loading a pmchart view.
    - Fixes a sigsegv in pmchart command line error handling.
    - Add optional kernel.all.cpu.guest plot to standard CPU view.
    - Update pmchart title [%h] with list of metric host names.
    - Improve correctness in the show-/hide-time-control mechanism.
    - Add a close button to preferences dialog to improve usability.
    - Fix Preference dialog handling of Remove color scheme button.
    - Add new pmchart views into the installed set (ElasticSearch,
      Apache) - thanks to Owen Butler.
    - New tutorial covering setup of PCP authentication mechanisms.
    - Incorporate the PCP books into the build (pcp-doc subpackage).
